--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,25 +1,20 @@
-<h1>Listing posts</h1>
+<h1>Posts</h1>
 
 <table>
-  <tr>
-    <th>Name</th>
-    <th>Title</th>
-    <th>Content</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @posts.each do |post| %>
-  <tr>
-    <td><%= post.name %></td>
-    <td><%= post.title %></td>
-    <td><%= post.content %></td>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+  <% @posts.each do |post| %>
+    <tr>
+      <td>
+	<h2><%= post.name %></h2>
+	<h3><%= post.title %></h3>
+	<p><%= post.content %></p>
+	<div class="actions">
+	  <%= link_to 'Show', post %>
+	  <%= link_to 'Edit', edit_post_path(post) %>
+	  <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+	</div>
+      </td>
+    </tr>
+  <% end %>
 </table>
 
 <br />
