--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,15 @@
-<%= form_for([@post, @comment]) do |f| %>
+<%= form_for([@post, @post.comments.build]) do |f| %>
+  <% if flash[:errors] %>
+    <div id="error_explanation">
+      <h2><%= pluralize(flash[:errors].count, "error") %>
+	prohibited this comment from being saved:</h2>
+      <ul>
+	<% flash[:errors].full_messages.each do |msg| %>
+        <li><%= msg %></li>
+	<% end %>
+      </ul>
+    </div>
+  <% end %>
   <div class="field">
     <%= f.label :commenter %><br />
     <%= f.text_field :commenter %>
