--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
 	<h2><%= post.name %></h2>
 	<h3><%= post.title %></h3>
 	<p><%= post.content %></p>
-	<div class="actions">
+	<div class="index_actions">
 	  <%= link_to 'Show', post %>
 	  <%= link_to 'Edit', edit_post_path(post) %>
 	  <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
