--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,26 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Name:</b>
-  <%= @post.name %>
-</p>
-
-<p>
-  <b>Title:</b>
-  <%= @post.title %>
-</p>
-
-<p>
-  <b>Content:</b>
-  <%= @post.content %>
-</p>
+<h1><%= @post.name %></h1>
+<h2><%= @post.title %></h2>
+<p><%= @post.content %></p>
 
 <p>
   <b>Tags:</b>
   <%= join_tags @post %>
 </p>
 
-<h2>Comments</h2>
+<h2><%= "Comments (#{ @post.comments.count })"%></h2>
 <%= render @post.comments %>
 
 <h2>Add a comment:</h2>
