Added helper which humanize a date.

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <p>
-  <b><%= comment.commenter %></b> commented on <%= comment.created_at %>
+  <b><%= comment.commenter %></b> commented on <%= humanize_date(comment.created_at) %>
 </p>
 
 <p><%= comment.body %></p>
