--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Blog</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body style=" background: #EEEEEE">
+  <head>
+    <title>Blog</title>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
 
-<%= yield %>
+    <div class="nav_bar_container">
+      <div class="nav_bar">
+	<%= link_to "Home", root_path %>
+      </div>
+    </div>
+    <br/>
 
-</body>
+    <div class="content_container">
+      <div class="content">
+	<%= yield %>
+      </div>
+    </div>
+
+  </body>
 </html>
