--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,23 +1,9 @@
 <h1>Posts</h1>
 
-<% @posts.each do |post| %>
-  <%= div_for post do %>
-    <h2><%= post.name %></h2>
-    <h3><%= post.title %></h3>
-    <p><%= post.content %></p>
-    <div class="num_comments">
-      <b><%= "Comments (#{ post.comments.count})"%></b>
-    </div>
-    <div class="index_actions">
-      <%= link_to 'Show', post %>
-      <%= link_to 'Edit', edit_post_path(post) %>
-      <%= link_to 'Destroy', post, method: :delete, remote: true, class: "delete_post", 
-	  data: { confirm: 'Are you sure?' } %>
-    </div>
-    <hr />
-  <% end %>
-<% end %>
+<div id="posts">
+  <%= render @posts %>
+</div>
 
 <br />
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to "New Post", new_post_path %>
