--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,8 +9,10 @@
   <%= join_tags @post %>
 </p>
 <hr />
-<h2><%= "Comments (#{ @post.comments.count })"%></h2>
-<%= render @post.comments %>
+<h2 id="num_comments"><%= "Comments (#{ @post.comments.count })"%></h2>
+<div id="comments">
+  <%= render @post.comments %>
+</div>
 
 <h2>Add a comment:</h2>
 <%= render "comments/form" %>
