--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <div class="nav_bar_container">
       <div class="nav_bar">
 	<%= link_to "Home", root_path %>
+	<%= link_to "Blog", posts_path %>
       </div>
     </div>
     <br/>
