Added styles to pagination

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,6 +6,6 @@
 
 <br />
 
-<%= will_paginate @posts %>
+<%= will_paginate @posts, class: 'paginator' %>
 
 <%= link_to "New Post", new_post_path %>
