--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -2,3 +2,55 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+body {
+    background-color: #383838;
+}
+
+div.content_container, div.nav_bar_container {
+    width: 70%;
+    background: #D8D8D8;
+    margin: auto;
+    border-radius: 20px;
+}
+
+div.content {
+    padding: 2%;
+}
+
+div.nav_bar {
+    padding: 1%;
+}
+
+.paginator {
+    
+    background: #f1f1f1;
+    border: 1px solid #e5e5e5;
+    text-align: center;
+    padding: 1em;
+    cursor: default; }
+
+.paginator a, .paginator span {
+    padding: 0.2em 0.3em; }
+
+.paginator .disabled {
+    color: #aaaaaa; }
+
+.paginator .current {
+    font-style: normal;
+    font-weight: bold;
+    background-color: #bebebe;
+    display: inline-block;
+    width: 1.4em;
+    height: 1.4em;
+    line-height: 1.5;
+    -moz-border-radius: 1em;
+    -webkit-border-radius: 1em;
+    border-radius: 1em;
+    text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px; }
+
+.paginator a {
+    text-decoration: none;
+    color: black; }
+
+.paginator a:hover, .paginator a:focus {
+    text-decoration: underline; }
