Added ajax pagination.

--- a/app/views/posts/destroy.js.erb
+++ b/app/views/posts/destroy.js.erb
@@ -1,1 +1,5 @@
-$('#<%= dom_id(@post) %>').fadeOut();
+$('#<%= dom_id(@post) %>').fadeOut('fast', function(){
+  <% if @next_post_pagination %>
+    $("#posts").append("<%=j render @next_post_pagination %>");
+  <% end %>
+});
