--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,9 @@
 <h1>Posts</h1>
 
 <div id="posts">
-  <%= render @posts %>
+  <%= render "posts" %>
 </div>
 
 <br />
-
-<%= will_paginate @posts, class: 'paginator' %>
 
 <%= link_to "New Post", new_post_path %>
