Removed ajax pagination.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,10 @@
 <h1>Posts</h1>
 
 <div id="posts">
-  <%= render "posts" %>
+  <%= render @posts %>
 </div>
 
 <br />
 
 <%= link_to "New Post", new_post_path %>
+<%= will_paginate @posts, class: 'paginator' %>
