--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,18 @@
 
     <div class="nav_bar_container">
       <div class="nav_bar">
-	
-	<%= link_to "Home", root_path %>
-	<%= link_to "Blog", posts_path %>
+	<%= link_to "Home", root_path %> |
+	<%= link_to "Blog", posts_path %> |
+
+	<% if user_signed_in? %>
+          <%= link_to "Sign out", destroy_user_session_path, method: :delete %> |
+	  <%= link_to "Edit", edit_user_registration_path %>
+	  <span>Signed in as <%= current_user.email %></span>
+	<% else %>
+	  <%= link_to "Sign Up", new_user_registration_path %> |
+	  <%= link_to "Sign In", user_session_path %>
+	  
+	<% end%>
       </div>
     </div>
     <br/>
