--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,10 @@
 	<%= link_to "Blog", posts_path %> |
 
 	<% if user_signed_in? %>
+          <%= link_to "New post", new_post_path %> |
           <%= link_to "Sign out", destroy_user_session_path, method: :delete %> |
 	  <%= link_to "Edit", edit_user_registration_path %>
-	  <span>Signed in as <%= current_user.email %></span>
+	  <span>Signed in as <%= current_user.username %></span>
 	<% else %>
 	  <%= link_to "Sign Up", new_user_registration_path %> |
 	  <%= link_to "Sign In", user_session_path %>
