--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -6,7 +6,7 @@
   <p><%= comment.body %></p>
 
   <p>
-    <%= link_to "Delete", [comment.post, comment], confirm: 'Are you sure?', method: :delete, 
+    <%= link_to "Delete", [comment.post.user, comment.post, comment], confirm: 'Are you sure?', method: :delete, 
 	remote: true  %>
   </p>
 <% end %>
