--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,16 @@
     <div class="nav_bar_container">
       <div class="nav_bar">
 	<%= link_to "Home", root_path %> |
-	<%= link_to "Blog", posts_path %> |
 
 	<% if user_signed_in? %>
-          <%= link_to "New post", new_post_path %> |
+          <%= link_to "New post", new_user_post_path(current_user) %> |
           <%= link_to "Sign out", destroy_user_session_path, method: :delete %> |
 	  <%= link_to "Signed in as #{ current_user.username }", 
 	      edit_user_registration_path %>
 	<% else %>
 	  <%= link_to "Sign Up", new_user_registration_path %> |
 	  <%= link_to "Sign In", user_session_path %>
-	  
+
 	<% end%>
       </div>
     </div>
