--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,9 +5,9 @@
       <b><%= "Comments (#{ post.comments.count})"%></b>
     </div>
     <div class="index_actions">
-      <%= link_to 'Show', post %>
-      <%= link_to 'Edit', edit_post_path(post) %>
-      <%= link_to 'Destroy', post, method: :delete, remote: true, 
+      <%= link_to 'Show', [post.user, post] %>
+      <%= link_to 'Edit', edit_user_post_path(post.user, post) %>
+      <%= link_to 'Destroy', [post.user, post], method: :delete, remote: true, 
 	  data: { confirm: 'Are you sure?' } %>
     </div>
     <hr />
