--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,5 +14,4 @@
 <h2>Add a comment:</h2>
 <%= render "comments/form" %>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', user_posts_path(@user) %>
