--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 	<% if user_signed_in? %>
           <%= link_to "New post", new_user_post_path(current_user) %> |
           <%= link_to "Sign out", destroy_user_session_path, method: :delete %> |
+	  <%= link_to 'My posts', user_posts_path(current_user) %> |
 	  <%= link_to "Signed in as #{ current_user.username }", 
 	      edit_user_registration_path %>
 	<% else %>
