--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome to Blog!</h1>
 <h2>Latests posts:</h2>
 <%= render partial: "posts/post", collection: @posts, as: :post %>
+<%= will_paginate @posts, class: 'paginator' %>
