--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@user, @post, @post.comments.build], remote: true) do |f| %>
+<%= form_for([@post.user, @post, @post.comments.build], remote: true) do |f| %>
   <div class="field">
     <%= f.label :body %><br />
     <%= f.text_area :body %>
