Added styles to authentication.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -58,3 +58,12 @@ div.messages {
 
 .paginator a:hover, .paginator a:focus {
     text-decoration: underline; }
+
+div#right {
+    width: 82%;
+    float: right;
+}
+
+p#auth_links {
+    width: 50%;
+}
