--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,5 +1,4 @@
 body {
-  background-color: #fff;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
@@ -23,10 +22,10 @@ a {
   &:visited {
     color: #666;
   }
-  &:hover {
-    color: #fff;
-    background-color: #000;
-  }
+  /* &:hover { */
+  /*   color: #fff; */
+  /*   background-color: #000; */
+  /* } */
 }
 
 div {
