--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
     <div class="nav_bar_container">
       <div class="nav_bar">
-	<%= link_to "Home", root_path %> |
+	<%= link_to "Home", root_path %>
 
 	<% if user_signed_in? %>
           <%= link_to "New post", new_user_post_path(current_user) %> |
@@ -18,10 +18,6 @@
 	  <%= link_to 'My posts', user_posts_path(current_user) %> |
 	  <%= link_to "Signed in as #{ current_user.username }", 
 	      edit_user_registration_path %>
-	<% else %>
-	  <%= link_to "Sign Up", new_user_registration_path %> |
-	  <%= link_to "Sign In", user_session_path %>
-
 	<% end%>
       </div>
     </div>
